--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "parconc-examples"]
-	path = parconc-examples
-	url = git@github.com:rcook/parconc-examples.git
-[submodule "examples/src"]
-	path = examples/src
-	url = https://github.com/seahug/parconc-examples.git
+[submodule "examples"]
+	path = examples
+	url = git://github.com/seahug/parconc-examples.git
