--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples"]
 	path = examples
-    url = git@github.com:seahug/parconc-examples.git
+    url = https://github.com/seahug/pcph.git
