--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples"]
 	path = examples
-    url = https://github.com/seahug/pcph.git
+    url = https://github.com/seahug/parconc-examples.git
